--- a/CURLHandleSource/CURLHandle.xcodeproj/xcshareddata/xcschemes/CURLHandle iOS.xcscheme
+++ b/CURLHandleSource/CURLHandle.xcodeproj/xcshareddata/xcschemes/CURLHandle iOS.xcscheme
@@ -20,6 +20,20 @@
                ReferencedContainer = "container:CURLHandle.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
+         <BuildActionEntry
+            buildForTesting = "YES"
+            buildForRunning = "NO"
+            buildForProfiling = "NO"
+            buildForArchiving = "NO"
+            buildForAnalyzing = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "5F53DAB31726F3F200DE6269"
+               BuildableName = "CURLHandleTests-iOS.octest"
+               BlueprintName = "CURLHandleTests-iOS"
+               ReferencedContainer = "container:CURLHandle.xcodeproj">
+            </BuildableReference>
+         </BuildActionEntry>
       </BuildActionEntries>
    </BuildAction>
    <TestAction
@@ -28,6 +42,16 @@
       shouldUseLaunchSchemeArgsEnv = "YES"
       buildConfiguration = "Debug">
       <Testables>
+         <TestableReference
+            skipped = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "5F53DAB31726F3F200DE6269"
+               BuildableName = "CURLHandleTests-iOS.octest"
+               BlueprintName = "CURLHandleTests-iOS"
+               ReferencedContainer = "container:CURLHandle.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
       </Testables>
    </TestAction>
    <LaunchAction
